stripe credits and extension

--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
     "@trpc/next": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@types/uuid": "^10.0.0",
+    "archiver": "^7.0.1",
+    "bcryptjs": "^3.0.2",
     "gray-matter": "^4.0.3",
+    "jose": "^6.0.12",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
     "next-mdx-remote": "^5.0.0",
@@ -38,12 +42,16 @@
     "nodemailer": "^7.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "stripe": "^18.4.0",
     "superjson": "^2.2.1",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.0.15",
+    "@types/archiver": "^6.0.3",
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20.14.10",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.0.0",
