booking and extensions login and balance deduct and topup

--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@trpc/next": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@types/react-calendar": "^4.1.0",
     "@types/uuid": "^10.0.0",
     "archiver": "^7.0.1",
     "bcryptjs": "^3.0.2",
+    "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "jose": "^6.0.12",
     "next": "^15.2.3",
@@ -41,6 +43,7 @@
     "next-seo": "^6.6.0",
     "nodemailer": "^7.0.5",
     "react": "^19.0.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.0.0",
     "stripe": "^18.4.0",
     "superjson": "^2.2.1",
