--- a/public/extension/ai-consulate/manifest.json
+++ b/public/extension/ai-consulate/manifest.json
@@ -1,13 +1,13 @@
 {
   "manifest_version": 3,
   "name": "AI Consulate",
-  "version": "0.1.0",
-  "description": "Check your AI Consulate credit balance.",
+  "version": "0.3.0",
+  "description": "AI Consulate - Login, check credits, test deductions, and webhook auto top-ups.",
   "action": {
     "default_popup": "popup.html",
     "default_title": "AI Consulate"
   },
-  "permissions": ["storage"],
+  "permissions": ["storage", "activeTab"],
   "host_permissions": [
     "http://*/*",
     "https://*/*"
